# xwarn

./: .envrc  .gitignore  Cargo.toml  README.md  README.mdi.md  clippy.sh  dev.sh  dist.sh  env.sh  init.sh  out.txt
src/: lib.rs
tests/: main.rs
