[package]
name = "xwarn"
version = "0.0.1"
edition = "2021"
license = "BSL-1.0"
homepage = "https://github.com/xxai-art/xwarn"
repository = "https://github.com/xxai-art/xwarn"
description = ""

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
reqwest = "0.11.20"
serde_json = "1.0.107"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true
